[package]
name = "cavalry-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
pyo3 = "0.20.2"
similar = { version = "2.4.0", features = ["text", "unicode"] }
tokio = { version = "1.35", features = ["full"] }
tower-lsp = "0.20"
